[MenuFile][Reg&Log]未验证,未拆封,等bufread

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-OBJS = server.o fileops.o linklist.o msghandle.o menureact.o ../common/command.o
+OBJS = server.o fileops.o linklist.o msgops.o bufops.o menureact.o ../common/command.o
 TARGET = ../../bin/server
 
 $(TARGET):$(OBJS)
