[Split][Reg&Log]合并张工readbuf,拆分注册登入,验证成功

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "menu.h": "c",
         "client.h": "c",
         "linklist.h": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "command.h": "c"
     }
 }
