[Frame][p_Recv][SetPwd]搭建登入后的代码框架,加入修改密码功能试水,已通过验证,等待各模块上传整合

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-OBJS = server.o fileops.o linklist.o msgops.o bufops.o menureact.o appserver.o ../common/command.o
+OBJS = server.o fileops.o linklist.o msgops.o bufops.o menureact.o appserver.o funserver.o ../common/command.o
 TARGET = ../../bin/server
 
 $(TARGET):$(OBJS)
